unpackaged/main/default/objects/Test_Execution__c/Test_Execution__c.object-meta.xml
<CustomObject>
    <description>One tester&#39;s run of one case, in one cycle (or standalone when Test Cycle is blank). Identity is the triple (case, cycle-or-null, tester-or-null) — two testers in the same cycle each get their OWN execution. Lookups (not master-detail) by design: deleting a cycle must never cascade-delete run history. Public Read/Write: slots are trigger-created in an admin&#39;s transaction, so the claiming tester is never the owner.</description>
    <label>Test Execution</label>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Test Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>