unpackaged/main/default/objects/Test_Execution__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set while the slot is team-visible and unclaimed; kept in sync with the cycle&#39;s team ONLY while unclaimed.</description>
    <label>Assigned Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Test Executions</relationshipLabel>
    <relationshipName>Test_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>