unpackaged/main/default/objects/Test_Execution__c/fields/Assigned_Tester__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nullable: blank = unclaimed, visible to the whole assigned team. Claiming sets this on the SAME record; adding a second tester creates a NEW execution.</description>
    <label>Assigned Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Test Executions</relationshipLabel>
    <relationshipName>Assigned_Test_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>