unpackaged/main/default/objects/Test_Execution__c/fields/Claimed_Date__c.field-meta.xml
<CustomField>
    <fullName>Claimed_Date__c</fullName>
    <description>When the current tester claimed (or was assigned) this run. Set by UatExecutionService on every claim/assign, cleared when a pristine release returns the slot to the pool. Drives stale-claim detection and pool &quot;sitting since&quot; display.</description>
    <label>Claimed Date</label>
    <type>DateTime</type>
</CustomField>