unpackaged/main/default/objects/Test_Execution__c/fields/Identity_Key__c.field-meta.xml
<CustomField>
    <fullName>Identity_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Trigger-maintained unique key encoding the identity triple: caseId:cycleId-or-STANDALONE:testerId-or-UNCLAIMED. DB-level guard: prevents two executions silently merging and enforces at most one unclaimed slot per case+cycle. Do not edit by hand.</description>
    <externalId>true</externalId>
    <label>Identity Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>