unpackaged/main/default/objects/Test_Execution__c/fields/Last_Tested_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_Date__c</fullName>
    <description>Stamped when step results change / on submit.</description>
    <label>Last Tested Date</label>
    <type>Date</type>
</CustomField>