unpackaged/main/default/objects/Test_Execution__c/fields/Released__c.field-meta.xml
<CustomField>
    <fullName>Released__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True = this run was released (by the tester, an admin, or the stale-claim job) after work had been recorded. It is history: occupies no seat, hidden from the tester queue, kept so a later re-claim by the same tester resumes their own partial run instead of merging with anyone else&#39;s.</description>
    <label>Released</label>
    <type>Checkbox</type>
</CustomField>