unpackaged/main/default/objects/Test_Execution__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The case definition this run executes. Restricted delete: a case with run history cannot be deleted.</description>
    <label>Test Case</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Test Executions</relationshipLabel>
    <relationshipName>Test_Executions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>