unpackaged/main/default/objects/Test_Execution__c/fields/Test_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Test_Cycle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Nullable: blank = standalone/ad-hoc assignment outside any cycle. Restricted delete: a cycle with run history cannot be deleted (deleting would silently relabel every run &quot;Standalone&quot;).</description>
    <label>Test Cycle</label>
    <referenceTo>Test_Cycle__c</referenceTo>
    <relationshipLabel>Test Executions</relationshipLabel>
    <relationshipName>Test_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>