unpackaged/main/default/objects/Test_Execution__c/fields/Testing_Result__c.field-meta.xml
<CustomField>
    <fullName>Testing_Result__c</fullName>
    <description>Rolled up from step results: Failed if any step failed, else Blocked if any blocked, else Passed (only when Complete).</description>
    <label>Testing Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>