unpackaged/main/default/objects/Test_Execution__c/fields/Testing_Status__c.field-meta.xml
<CustomField>
    <fullName>Testing_Status__c</fullName>
    <description>Rolled up from step results on every change: Complete when every non-exploratory step has an answer.</description>
    <label>Testing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>