unpackaged/main/default/objects/Test_Execution__c/fields/UX_Rating__c.field-meta.xml
<CustomField>
    <fullName>UX_Rating__c</fullName>
    <description>Tester&#39;s 1-5 product-experience rating for this run (about the product, not the test result). Range enforced by validation rule.</description>
    <label>UX Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>