unpackaged/main/default/objects/Test_Execution__c/fields/UX_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>UX_Recommendation__c</fullName>
    <description>Tester&#39;s free-text improvement suggestion for this run.</description>
    <label>UX Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>