unpackaged/main/default/objects/Test_Execution__c/validationRules/UX_Rating_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>UX_Rating_Range</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(UX_Rating__c)) &amp;&amp; (UX_Rating__c &lt; 1 || UX_Rating__c &gt; 5)</errorConditionFormula>
    <errorDisplayField>UX_Rating__c</errorDisplayField>
    <errorMessage>UX Rating must be between 1 and 5.</errorMessage>
</ValidationRule>