unpackaged/main/default/objects/Test_Execution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Case__c</columns>
    <columns>Test_Cycle__c</columns>
    <columns>Assigned_Tester__c</columns>
    <columns>Testing_Status__c</columns>
    <columns>Testing_Result__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>